Add support for dynamic Call Activities