@@ -8,7 +8,6 @@ import com.leorces.model.runtime.activity.ActivityExecution;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -20,76 +19,47 @@ public class CallActivityService {
     private final VariablesService variablesService;
     private final ExpressionEvaluator expressionEvaluator;
 
-    public Map<String, Object> getInputMappings(ActivityExecution activity) {
+    public Map<String, Object> getInputMappings(ActivityExecution activity, Map<String, Object> variables) {
         var callActivity = (CallActivity) activity.definition();
-
-        if (callActivity.inputMappings() == null) {
-            return Collections.emptyMap();
-        }
-
-        var inputMappings = callActivity.inputMappings();
-
-        var scopedVariables = variablesService.getScopedVariables(activity);
-        return resolveMappings(
-                inputMappings,
-                scopedVariables,
-                callActivity.shouldProcessAllInputMappings()
-        );
+        var mappings = callActivity.inputMappings();
+        return mappings != null && !mappings.isEmpty()
+                ? resolveMappings(mappings, variables, callActivity.shouldProcessAllInputMappings())
+                : Map.of();
     }
 
     public Map<String, Object> getOutputMappings(ActivityExecution activity) {
         var callActivity = (CallActivity) activity.definition();
-
-        if (callActivity.outputMappings() == null) {
-            return Collections.emptyMap();
+        var mappings = callActivity.outputMappings();
+        if (mappings == null) {
+            return Map.of();
         }
-
-        var outputMappings = callActivity.outputMappings();
-
         var processVariables = variablesService.getProcessVariables(activity.id());
-        return resolveMappings(
-                outputMappings,
-                processVariables,
-                callActivity.shouldProcessAllOutputMappings()
-        );
+        return resolveMappings(mappings, processVariables, callActivity.shouldProcessAllOutputMappings());
     }
 
     private Map<String, Object> resolveMappings(List<VariableMapping> mappings,
-                                                Map<String, Object> sourceVars,
-                                                boolean includeAll) {
+                                                Map<String, Object> sourceVariables,
+                                                boolean shouldIncludeAll) {
         if (mappings == null || mappings.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
-
-        var result = new HashMap<String, Object>();
-
-        if (includeAll) {
-            result.putAll(sourceVars);
-        }
-
-        for (var mapping : mappings) {
-            processVariableMapping(mapping, sourceVars, result);
-        }
-
+        var result = shouldIncludeAll ? new HashMap<>(sourceVariables) : new HashMap<String, Object>();
+        mappings.forEach(mapping -> processVariableMapping(mapping, sourceVariables, result));
         return result;
     }
 
     private void processVariableMapping(VariableMapping mapping,
-                                        Map<String, Object> sourceVars,
-                                        Map<String, Object> targetVars) {
+                                        Map<String, Object> sourceVariables,
+                                        Map<String, Object> targetVariables) {
         var target = mapping.target();
         if (target == null) {
             return;
         }
-
         if (mapping.source() != null) {
-            targetVars.put(target, sourceVars.get(mapping.source()));
-            return;
-        }
-
-        if (mapping.sourceExpression() != null) {
-            var value = expressionEvaluator.evaluate(mapping.sourceExpression(), sourceVars, Object.class);
-            targetVars.put(target, value);
+            targetVariables.put(target, sourceVariables.get(mapping.source()));
+        } else if (mapping.sourceExpression() != null) {
+            var value = expressionEvaluator.evaluate(mapping.sourceExpression(), sourceVariables, Object.class);
+            targetVariables.put(target, value);
         }
     }
 
